--- a/Pets/Pets.csproj
+++ b/Pets/Pets.csproj
@@ -6,8 +6,10 @@
 
   <ItemGroup>
     <None Remove="Interfaces\" />
+    <None Remove="Models\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Interfaces\" />
+    <Folder Include="Models\" />
   </ItemGroup>
 </Project>
